@@ -78,6 +78,7 @@ Config =
       'OP Backlinks':                 [false, 'Add backlinks to the OP']
       'Quote Highlighting':           [true,  'Highlight the previewed post']
       'Quote Inline':                 [true,  'Show quoted post inline on quote click']
+      'QI only on index':             [false, 'Only activate Quote Inline on board index']
       'Quote Preview':                [true,  'Show quote content on hover']
       'Resurrect Quotes':             [true,  'Linkify dead quotes to archives']
       'Indicate OP quote':            [true,  'Add \'(OP)\' to OP quotes']
@@ -3731,7 +3732,7 @@ QuoteBacklink =
       link = a.cloneNode true
       if Conf['Quote Preview']
         $.on link, 'mouseover', QuotePreview.mouseover
-      if Conf['Quote Inline']
+      if Conf['Quote Inline'] and not (Conf['QI only on index'] and g.REPLY)
         $.on link, 'click', QuoteInline.toggle
       unless container = $.id "blc#{qid}"
         container = $.el 'span',
@@ -3745,6 +3746,7 @@ QuoteInline =
   init: ->
     Main.callbacks.push @node
   node: (post) ->
+    return if Conf['QI only on index'] and g.REPLY
     for quote in post.quotes
       continue unless quote.hash and quote.hostname is 'boards.4chan.org' and !/catalog$/.test(quote.pathname) or /\bdeadlink\b/.test quote.className
       $.on quote, 'click', QuoteInline.toggle
