@@ -1,4 +1,6 @@
 master
+- noface
+  Added new option 'Quote Inline only on index'.
 
 2.38.1
 - noface
